# project3

./: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiAutomaton.cpp  MultiAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  RightParenthesesAutomaton.cpp  RightParenthesesAutomaton.h  Rule.cpp  (+16 more)
